--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,12 @@
 @import "tailwindcss/utilities";
 
 /* -------- Font Type------- */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
+
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
+
 /* ========= VARIABLES ========== */
 :root{
     /* ---- colors ---- */
@@ -20,7 +24,8 @@
     --container-color-desktop: rgba(214, 214, 214, 0.921);
     --info-overlay-color: rgba(123, 123, 123, 0.744);
     /* ---- fonts ---- */
-    --body-font: "Bai Jamjuree", sans-serif;
+
+    --body-font: "DM Sans", sans-serif;
     /* -- font weights -- */
     --font-regular: 400;
     --font-medium: 500;
@@ -225,7 +230,8 @@ a, button{
 
 
 /* ============== SERVICES SECTION ============== */
-.services .title{
+.services .title,
+.projects .title{
     border-color: rgba(212, 212, 212, 0.451);
     transform: translate(-15px, -15px) rotate(-10deg);
 }
@@ -313,7 +319,7 @@ a, button{
 
 
 /* ============== MEDIA QUERIES ============== */
-@media screen and (min-width: 109.375rem) { /*--PC: 1750px--*/
+@media screen and (min-width: 189.375rem) { /*--PC: 1750px--109.375rem min-w previous*/
     .header{
         width: 100%;
         top: 0;
@@ -416,8 +422,11 @@ a, button{
     .carousel, .contact{
         background-color: var(--white-color);
     }
-    .header, .home, .services, .footer{
+    .header, .home, .services
         background-color: var(--container-color);
+    }
+    .footer{
+        background-color: transparent;
     }
     .home, .services, .projects, .contact, .footer{
         width: 100%;
@@ -470,8 +479,7 @@ a, button{
         border-radius: 5rem;
         border: 0.046875rem solid var(--section-border-color);
     }
-    .services .title-info,
-    .projects .title-info{
+    .services .title-info{
         font-size: 1.5rem;
     }
     .services .title,
