--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,9 +6,9 @@
 
 /* -------- Font Type------- */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');  */
 
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
 
 /* ========= VARIABLES ========== */
@@ -24,9 +24,7 @@
     --container-color-desktop: rgba(214, 214, 214, 0.921);
     --info-overlay-color: rgba(123, 123, 123, 0.744);
     /* ---- fonts ---- */
-
-    --body-font: "DM Sans", sans-serif;
-    /* -- font weights -- */
+    --body-font: "Open Sans", sans-serif;
     --font-regular: 400;
     --font-medium: 500;
     --font-semi-bold: 600;
@@ -66,7 +64,6 @@ body{
 
 /*------ Default styles ------*/
 h1, h2, h3, h4{
-    color: var(--title-color);
     font-weight: var(--font-bold);}
 a{
     text-decoration: none;
@@ -140,13 +137,13 @@ a, button{
     background-color: rgb(230, 230, 230);
     transition: 0.5s ease;
 }
-.page-loader .loader {
+.page-loader .loader{
     stroke-dasharray: 250;
     stroke-dashoffset: 250;
     animation: draw 2s forwards ease-in-out; /* Draw animation */
 }
-@keyframes draw {
-    to {
+@keyframes draw{
+    to{
         stroke-dashoffset: 0; /* Reveal the text */
     }
 }
@@ -422,11 +419,8 @@ a, button{
     .carousel, .contact{
         background-color: var(--white-color);
     }
-    .header, .home, .services
+    .header, .home, .services{
         background-color: var(--container-color);
-    }
-    .footer{
-        background-color: transparent;
     }
     .home, .services, .projects, .contact, .footer{
         width: 100%;
@@ -537,6 +531,7 @@ a, button{
         border-top-left-radius: 5rem;
         border-top-right-radius: 5rem;
         border: 0.046875rem solid var(--section-border-color);
+        background-color: transparent;
     }
     .footer .content .socials a{
         border: 0.25rem solid;
