--- a/public/output.css
+++ b/public/output.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
 
@@ -714,6 +714,10 @@ video {
   margin-right: 2rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .mt-12{
   margin-top: 3rem;
 }
@@ -732,18 +736,6 @@ video {
 
 .mt-8{
   margin-top: 2rem;
-}
-
-.mt-9{
-  margin-top: 2.25rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
 }
 
 .flex{
@@ -1074,6 +1066,10 @@ video {
 
 /* -------- Font Type------- */
 
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');  */
+
+/* @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap'); */
+
 /* ========= VARIABLES ========== */
 
 :root{
@@ -1088,8 +1084,7 @@ video {
   --container-color-desktop: rgba(214, 214, 214, 0.921);
   --info-overlay-color: rgba(123, 123, 123, 0.744);
   /* ---- fonts ---- */
-  --body-font: "Bai Jamjuree", sans-serif;
-  /* -- font weights -- */
+  --body-font: "DM Sans", sans-serif;
   --font-regular: 400;
   --font-medium: 500;
   --font-semi-bold: 600;
@@ -1148,7 +1143,6 @@ body{
 /*------ Default styles ------*/
 
 h1, h2, h3, h4{
-  color: var(--title-color);
   font-weight: var(--font-bold);
 }
 
@@ -1256,15 +1250,15 @@ a, button{
   transition: 0.5s ease;
 }
 
-.page-loader .loader {
+.page-loader .loader{
   stroke-dasharray: 250;
   stroke-dashoffset: 250;
   animation: draw 2s forwards ease-in-out;
   /* Draw animation */
 }
 
-@keyframes draw {
-  to {
+@keyframes draw{
+  to{
     stroke-dashoffset: 0;
     /* Reveal the text */
   }
@@ -1345,9 +1339,9 @@ a, button{
   }
 }
 
-.home .content .info .hht{
-  background-image: none!important;
-}
+/* .home .content .info .hht{
+    background-image: none!important;
+} */
 
 /* ============== CAROUSEL SECTION ============== */
 
@@ -1549,11 +1543,11 @@ a, button{
 
   /* --general */
 
-  .carousel, .contact{
+  .carousel, .contact, .footer{
     background-color: var(--white-color);
   }
 
-  .header, .home, .services, .footer{
+  .header, .home, .services{
     background-color: var(--container-color);
   }
 
@@ -1695,11 +1689,11 @@ a, button{
 
   /* --footer-- */
 
-  .footer{
-    border-top-left-radius: 5rem;
-    border-top-right-radius: 5rem;
-    border: 0.046875rem solid var(--section-border-color);
-  }
+  /* .footer{
+        border-top-left-radius: 5rem;
+        border-top-right-radius: 5rem;
+        border: 0.046875rem solid var(--section-border-color);
+    } */
 
   .footer .content .socials a{
     border: 0.25rem solid;
