--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,10 +5,7 @@
 @import "tailwindcss/utilities";
 
 /* -------- Font Type------- */
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');  */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
-
-/* @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
 
 /* ========= VARIABLES ========== */
@@ -20,11 +17,11 @@
     --section-border-color: rgba(187, 187, 187, 0.374);
     --link-border-color: rgba(212, 212, 212, 0.23);
     --text-color-light: hsl(0, 0%, 64%);
-    --container-color: rgba(219, 219, 219, 0.441);
-    --container-color-desktop: rgba(214, 214, 214, 0.921);
+    --container-color: rgba(222, 222, 222, 0.441);
+    --container-color-desktop: rgba(218, 218, 218, 0.921);
     --info-overlay-color: rgba(123, 123, 123, 0.744);
     /* ---- fonts ---- */
-    --body-font: "DM Sans", sans-serif;
+    --body-font: "Bai Jamjuree", sans-serif;
     --font-regular: 400;
     --font-medium: 500;
     --font-semi-bold: 600;
@@ -527,11 +524,11 @@ a, button{
         height: 7.5rem;
     }
     /* --footer-- */
-    /* .footer{
-        border-top-left-radius: 5rem;
-        border-top-right-radius: 5rem;
+    .footer{
+        border-top-left-radius: 3.5rem;
+        border-top-right-radius: 3.5rem;
         border: 0.046875rem solid var(--section-border-color);
-    } */
+    }
     .footer .content .socials a{
         border: 0.25rem solid;
         border-color: var(--link-border-color);
