--- a/public/output.css
+++ b/public/output.css
@@ -1626,7 +1626,7 @@ a, button{
   }
 
   .services .title-info,
-    .prjects .title-info{
+    .projects .title-info{
     font-size: 1.5rem;
   }
 
