--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -207,6 +207,10 @@ a, button, .cursor-custom{
     }
 }
 
+.home .content .location .text{
+    color: #5B5B5B;
+}
+
 
 /* ============== SPOKEN LANGUAGES SECTION ============== */
 .holder .item .lang::after{
@@ -550,8 +554,8 @@ a, button, .cursor-custom{
     .footer{
         justify-content: center;
         height: 1.5rem;
-        border-top-left-radius: 2.5rem;
-        border-top-right-radius: 2.5rem;
+        border-top-left-radius: 3rem;
+        border-top-right-radius: 3rem;
         border: 0.035rem solid var(--section-border-color);
     }
     .footer .line{
