--- a/public/output.css
+++ b/public/output.css
@@ -1364,7 +1364,7 @@ a, button, .cursor-custom{
 }
 
 .home .content .location .text{
-  color: #5B5B5B;
+  color: #505050;
 }
 
 /* ============== SPOKEN LANGUAGES SECTION ============== */
