--- a/public/output.css
+++ b/public/output.css
@@ -1269,17 +1269,44 @@ a, button, .cursor-custom{
 
 /* --Page loader-- */
 
+#page-loader {
+  transition: opacity 1s ease;
+}
+
 .page-loader{
   background-color: rgb(230, 230, 230);
   transition: 0.5s ease;
 }
 
-.page-loader .loader{
-  stroke-dasharray: 250;
-  stroke-dashoffset: 250;
-  animation: draw 2s forwards ease-in-out;
-  /* Draw animation */
+.page-loader .greeting-container {
+  height: 2rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.page-loader .greeting {
+  font-size: 2rem;
+  font-weight: 600;
+  transform: translateY(0);
+  transition: transform 0.3s ease;
+}
+
+/* Responsive adjustments */
+
+@media (max-width: 768px) {
+  .greeting {
+    font-size: 1.75rem;
+  }
+}
+
+/* 
+.page-loader .loader{
+    stroke-dasharray: 250;
+    stroke-dashoffset: 250;
+    animation: draw 2s forwards ease-in-out;
+} */
 
 @keyframes draw{
   to{
@@ -1288,8 +1315,8 @@ a, button, .cursor-custom{
   }
 }
 
+*/
 /* --Color classes-- */
-
 .color-primary{
   color: var(--primary-color);
 }
