--- a/public/output.css
+++ b/public/output.css
@@ -1092,6 +1092,12 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-opacity{
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 /* -------- Font Type------- */
 
 /* ========= VARIABLES ========== */
@@ -1270,7 +1276,7 @@ a, button, .cursor-custom{
 /* --Page loader-- */
 
 #page-loader {
-  transition: opacity 1s ease;
+  /* transition: opacity 1s ease; */
 }
 
 .page-loader{
@@ -1278,18 +1284,7 @@ a, button, .cursor-custom{
   transition: 0.5s ease;
 }
 
-.page-loader .greeting-container {
-  height: 2rem;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .page-loader .greeting {
-  font-size: 2rem;
-  font-weight: 600;
-  transform: translateY(0);
   transition: transform 0.3s ease;
 }
 
