--- a/public/output.css
+++ b/public/output.css
@@ -690,6 +690,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-7{
+  margin-bottom: 1.75rem;
+}
+
 .mb-8{
   margin-bottom: 2rem;
 }
@@ -718,10 +722,6 @@ video {
   margin-right: 2rem;
 }
 
-.mt-12{
-  margin-top: 3rem;
-}
-
 .mt-20{
   margin-top: 5rem;
 }
@@ -730,12 +730,16 @@ video {
   margin-top: 0.75rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
+.mt-7{
+  margin-top: 1.75rem;
 }
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mt-9{
+  margin-top: 2.25rem;
 }
 
 .flex{
@@ -772,6 +776,10 @@ video {
 
 .h-40{
   height: 10rem;
+}
+
+.h-5{
+  height: 1.25rem;
 }
 
 .h-6{
@@ -814,8 +822,68 @@ video {
   height: 100vh;
 }
 
-.h-4{
+.h-\[\.825rem\]{
+  height: .825rem;
+}
+
+.h-\[1\.825rem\]{
+  height: 1.825rem;
+}
+
+.h-\[1\.82rem\]{
+  height: 1.82rem;
+}
+
+.h-\[1\.8rem\]{
+  height: 1.8rem;
+}
+
+.h-\[1rem\]{
   height: 1rem;
+}
+
+.h-\[rem\]{
+  height: rem;
+}
+
+.h-\[2rem\]{
+  height: 2rem;
+}
+
+.h-\[1\.rem\]{
+  height: 1.rem;
+}
+
+.h-\[1\.7rem\]{
+  height: 1.7rem;
+}
+
+.h-\[1\.75rem\]{
+  height: 1.75rem;
+}
+
+.h-\[1\.5rem\]{
+  height: 1.5rem;
+}
+
+.h-\[1\.25rem\]{
+  height: 1.25rem;
+}
+
+.h-\[1\.2rem\]{
+  height: 1.2rem;
+}
+
+.h-\[1\.1rem\]{
+  height: 1.1rem;
+}
+
+.h-\[1\.15rem\]{
+  height: 1.15rem;
+}
+
+.h-\[1\.125rem\]{
+  height: 1.125rem;
 }
 
 .w-10{
@@ -850,16 +918,16 @@ video {
   width: 11rem;
 }
 
+.w-5{
+  width: 1.25rem;
+}
+
 .w-6{
   width: 1.5rem;
 }
 
 .w-7{
   width: 1.75rem;
-}
-
-.w-8{
-  width: 2rem;
 }
 
 .w-9{
@@ -916,6 +984,70 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-\[\.825rem\]{
+  width: .825rem;
+}
+
+.w-\[1\.825rem\]{
+  width: 1.825rem;
+}
+
+.w-\[1\.82rem\]{
+  width: 1.82rem;
+}
+
+.w-\[1\.8rem\]{
+  width: 1.8rem;
+}
+
+.w-\[1\.rem\]{
+  width: 1.rem;
+}
+
+.w-\[1rem\]{
+  width: 1rem;
+}
+
+.w-\[rem\]{
+  width: rem;
+}
+
+.w-\[2rem\]{
+  width: 2rem;
+}
+
+.w-\[1\.5rem\]{
+  width: 1.5rem;
+}
+
+.w-\[1\.7rem\]{
+  width: 1.7rem;
+}
+
+.w-\[1\.75rem\]{
+  width: 1.75rem;
+}
+
+.w-\[1\.25rem\]{
+  width: 1.25rem;
+}
+
+.w-\[1\.2rem\]{
+  width: 1.2rem;
+}
+
+.w-\[1\.1rem\]{
+  width: 1.1rem;
+}
+
+.w-\[1\.15rem\]{
+  width: 1.15rem;
+}
+
+.w-\[1\.125rem\]{
+  width: 1.125rem;
 }
 
 .-translate-x-1\/2{
@@ -1035,6 +1167,10 @@ video {
   font-size: 0.775em;
 }
 
+.text-\[0\.85rem\]{
+  font-size: 0.85rem;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1055,6 +1191,11 @@ video {
   line-height: 1rem;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1073,6 +1214,10 @@ video {
 
 .font-semibold{
   font-weight: 600;
+}
+
+.leading-10{
+  line-height: 2.5rem;
 }
 
 .tracking-tight{
@@ -1263,6 +1408,26 @@ a, button, .cursor-custom{
   color: transparent;
 }
 
+/* --Link tooltip-- */
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip:hover::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--primary-color);
+  color: white;
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
 /* --Scroll reveal animation-- */
 
 .not-shown{
@@ -1278,9 +1443,9 @@ a, button, .cursor-custom{
 
 /* --Page loader-- */
 
-#page-loader {
-  /* transition: opacity 1s ease; */
-}
+/* #page-loader {
+    transition: opacity 1s ease;
+  } */
 
 .page-loader{
   background-color: rgb(230, 230, 230);
@@ -1291,30 +1456,21 @@ a, button, .cursor-custom{
   transition: transform 0.3s ease;
 }
 
-/* Responsive adjustments */
-
-@media (max-width: 768px) {
-  .greeting {
-    font-size: 1.75rem;
-  }
-}
-
 /* 
+-----OTHER PAGE LOADER ANIMATION-----
 .page-loader .loader{
     stroke-dasharray: 250;
     stroke-dashoffset: 250;
     animation: draw 2s forwards ease-in-out;
+}
+@keyframes draw{
+    to{
+        stroke-dashoffset: 0; 
+    }
 } */
 
-@keyframes draw{
-  to{
-    stroke-dashoffset: 0;
-    /* Reveal the text */
-  }
-}
-
-*/
 /* --Color classes-- */
+
 .color-primary{
   color: var(--primary-color);
 }
@@ -1337,6 +1493,19 @@ a, button, .cursor-custom{
 
 .bg-container-desktop{
   background-color: var(--container-color-desktop);
+}
+
+/* --Button hover-- */
+
+.btn-hover{
+  transition: 0.3s ease-in;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn-hover:hover{
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 /* ============== HEADER & NAVBAR ============== */
@@ -1386,10 +1555,6 @@ a, button, .cursor-custom{
     transform: translateY(-15px) rotate(-10deg);
     /* Move up again */
   }
-}
-
-.home .content .location .text{
-  color: #505050;
 }
 
 /* ============== CAROUSEL SECTION ============== */
@@ -1448,13 +1613,18 @@ a, button, .cursor-custom{
 
 /* ============== CONTACT SECTION ============== */
 
-.contact .actions a:nth-child(1){
-  border-color: rgba(212, 212, 212, 0.192);
-}
-
 .contact .heading .image-container{
   border-top: 0.046975rem solid var(--section-border-color);
   background-color: rgb(239, 239, 239);
+}
+
+.contact .location .text{
+  /* color: #505050; */
+  color: #666;
+}
+
+.contact .actions a:nth-child(1){
+  border-color: rgba(212, 212, 212, 0.192);
 }
 
 /* ============== SPOKEN LANGUAGES SECTION ============== */
@@ -1566,7 +1736,7 @@ a, button, .cursor-custom{
   /*--Ipad Air: 750px--*/
 
   .page-loader .greeting {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
 
   .home, .carousel, .skillset, .projects, .contact, .footer{
