--- a/public/output.css
+++ b/public/output.css
@@ -806,6 +806,10 @@ video {
   height: 0.075rem;
 }
 
+.h-\[1\.075rem\]{
+  height: 1.075rem;
+}
+
 .h-\[15\.375rem\]{
   height: 15.375rem;
 }
@@ -820,94 +824,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-\[\.825rem\]{
-  height: .825rem;
-}
-
-.h-\[1\.825rem\]{
-  height: 1.825rem;
-}
-
-.h-\[1\.82rem\]{
-  height: 1.82rem;
-}
-
-.h-\[1\.8rem\]{
-  height: 1.8rem;
-}
-
-.h-\[1rem\]{
-  height: 1rem;
-}
-
-.h-\[rem\]{
-  height: rem;
-}
-
-.h-\[2rem\]{
-  height: 2rem;
-}
-
-.h-\[1\.rem\]{
-  height: 1.rem;
-}
-
-.h-\[1\.7rem\]{
-  height: 1.7rem;
-}
-
-.h-\[1\.75rem\]{
-  height: 1.75rem;
-}
-
-.h-\[1\.5rem\]{
-  height: 1.5rem;
-}
-
-.h-\[1\.25rem\]{
-  height: 1.25rem;
-}
-
-.h-\[1\.2rem\]{
-  height: 1.2rem;
-}
-
-.h-\[1\.1rem\]{
-  height: 1.1rem;
-}
-
-.h-\[1\.15rem\]{
-  height: 1.15rem;
-}
-
-.h-\[1\.125rem\]{
-  height: 1.125rem;
-}
-
-.h-\[1\.12rem\]{
-  height: 1.12rem;
-}
-
-.h-\[1\.0rem\]{
-  height: 1.0rem;
-}
-
-.h-\[1\.07rem\]{
-  height: 1.07rem;
-}
-
-.h-\[1\.075rem\]{
-  height: 1.075rem;
-}
-
-.h-\[1\.025rem\]{
-  height: 1.025rem;
-}
-
-.h-\[1\.0725rem\]{
-  height: 1.0725rem;
 }
 
 .w-10{
@@ -956,6 +872,10 @@ video {
 
 .w-9{
   width: 2.25rem;
+}
+
+.w-\[1\.075rem\]{
+  width: 1.075rem;
 }
 
 .w-\[15\.375rem\]{
@@ -1008,90 +928,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-\[\.825rem\]{
-  width: .825rem;
-}
-
-.w-\[1\.825rem\]{
-  width: 1.825rem;
-}
-
-.w-\[1\.82rem\]{
-  width: 1.82rem;
-}
-
-.w-\[1\.8rem\]{
-  width: 1.8rem;
-}
-
-.w-\[1\.rem\]{
-  width: 1.rem;
-}
-
-.w-\[1rem\]{
-  width: 1rem;
-}
-
-.w-\[rem\]{
-  width: rem;
-}
-
-.w-\[2rem\]{
-  width: 2rem;
-}
-
-.w-\[1\.5rem\]{
-  width: 1.5rem;
-}
-
-.w-\[1\.7rem\]{
-  width: 1.7rem;
-}
-
-.w-\[1\.75rem\]{
-  width: 1.75rem;
-}
-
-.w-\[1\.25rem\]{
-  width: 1.25rem;
-}
-
-.w-\[1\.2rem\]{
-  width: 1.2rem;
-}
-
-.w-\[1\.1rem\]{
-  width: 1.1rem;
-}
-
-.w-\[1\.15rem\]{
-  width: 1.15rem;
-}
-
-.w-\[1\.125rem\]{
-  width: 1.125rem;
-}
-
-.w-\[1\.12rem\]{
-  width: 1.12rem;
-}
-
-.w-\[1\.0rem\]{
-  width: 1.0rem;
-}
-
-.w-\[1\.07rem\]{
-  width: 1.07rem;
-}
-
-.w-\[1\.075rem\]{
-  width: 1.075rem;
-}
-
-.w-\[1\.05rem\]{
-  width: 1.05rem;
 }
 
 .-translate-x-1\/2{
@@ -1215,6 +1051,11 @@ video {
   font-size: 0.85rem;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1233,11 +1074,6 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-bold{
@@ -1270,10 +1106,6 @@ video {
 
 .tracking-wide{
   letter-spacing: 0.025em;
-}
-
-.underline{
-  text-decoration-line: underline;
 }
 
 .no-underline{
@@ -1496,7 +1328,7 @@ a, button, .cursor-custom{
   transition: 0.5s ease;
 }
 
-.page-loader .greeting {
+.page-loader .word {
   transition: transform 0.3s ease;
 }
 
@@ -1779,7 +1611,7 @@ a, button, .cursor-custom{
 @media screen and (max-width: 46.875rem) {
   /*--Ipad Air: 750px--*/
 
-  .page-loader .greeting {
+  .page-loader .word {
     font-size: 2rem;
   }
 
