--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -153,7 +153,7 @@ a, button, .cursor-custom{
     background-color: rgb(230, 230, 230);
     transition: 0.5s ease;
 }
-.page-loader .greeting {
+.page-loader .word {
     transition: transform 0.3s ease;
 }
 
@@ -424,7 +424,7 @@ a, button, .cursor-custom{
 }
 
 @media screen and (max-width: 46.875rem) { /*--Ipad Air: 750px--*/
-    .page-loader .greeting {
+    .page-loader .word {
         font-size: 2rem;
     }
     .home, .carousel, .skillset, .projects, .contact, .footer{
