--- a/public/output.css
+++ b/public/output.css
@@ -688,8 +688,16 @@ video {
   margin-bottom: 3.5rem;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .mb-3{
   margin-bottom: 0.75rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mb-5{
@@ -884,12 +892,12 @@ video {
   width: 1.075rem;
 }
 
-.w-\[15\.375rem\]{
-  width: 15.375rem;
+.w-\[10rem\]{
+  width: 10rem;
 }
 
-.w-\[15rem\]{
-  width: 15rem;
+.w-\[15\.375rem\]{
+  width: 15.375rem;
 }
 
 .w-\[18\.375rem\]{
@@ -945,6 +953,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
 .items-center{
   align-items: center;
 }
@@ -963,6 +975,10 @@ video {
 
 .justify-evenly{
   justify-content: space-evenly;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .overflow-hidden{
@@ -1086,6 +1102,26 @@ video {
   line-height: 1rem;
 }
 
+.text-\[0rem\]{
+  font-size: 0rem;
+}
+
+.text-\[0\.8rem\]{
+  font-size: 0.8rem;
+}
+
+.text-\[0\.82rem\]{
+  font-size: 0.82rem;
+}
+
+.text-\[0\.826rem\]{
+  font-size: 0.826rem;
+}
+
+.text-\[0\.825rem\]{
+  font-size: 0.825rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1116,6 +1152,22 @@ video {
 
 .tracking-wide{
   letter-spacing: 0.025em;
+}
+
+.text-\[\]{
+  color: ;
+}
+
+.text-\[r\]{
+  color: r;
+}
+
+.text-\[rem\]{
+  color: rem;
+}
+
+.text-\[0\.rem\]{
+  color: 0.rem;
 }
 
 .no-underline{
@@ -1698,16 +1750,6 @@ button,
   .contact .heading .title {
     font-size: 2.25rem;
   }
-
-  /* --skillset-- */
-
-  .skillset .serv-con {
-    flex-direction: column;
-  }
-
-  .skillset .serv-con .con-1 {
-    margin-bottom: 2rem;
-  }
 }
 
 @media screen and (max-width: 64.625rem) {
@@ -1899,22 +1941,6 @@ button,
   .skillset .title,
   .projects .title {
     font-size: 0.75rem;
-  }
-
-  .skillset .serv-con {
-    flex-direction: column;
-  }
-
-  .skillset .serv-con .box {
-    width: 100%;
-  }
-
-  .skillset .serv-con .info {
-    font-size: 0.7875rem;
-  }
-
-  .skillset .serv-con .info .text-break {
-    display: flex;
   }
 
   /* --projects-- */
